After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 696015 - PATCH Add doc warning to g_base64_decode()
PATCH Add doc warning to g_base64_decode()
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: general
2.35.x
Other Linux
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2013-03-17 23:00 UTC by David Schleef
Modified: 2013-03-18 02:49 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch (1013 bytes, patch)
2013-03-17 23:00 UTC, David Schleef
accepted-commit_now Details | Review

Description David Schleef 2013-03-17 23:00:29 UTC
Created attachment 239079 [details] [review]
patch

For your consideration.  It was not clear to me whether or not this function may be used to generate a character string.


commit c65704f60cc25bb06fa32c1d90f73b7e33bf8914
Author: David Schleef <ds@schleef.org>
Date:   Sun Mar 17 15:56:17 2013 -0700

    Add warning to g_base64_decode()
Comment 1 Matthias Clasen 2013-03-17 23:26:37 UTC
Review of attachment 239079 [details] [review]:

Looks fine