Add warning to g_base64_decode()

https://bugzilla.gnome.org/show_bug.cgi?id=696015